# Piper

./: README.md  pyproject.toml
examples/: example.py
piper/: __init__.py  filter.py  map.py  pipeline.py  reduce.py  spread.py  unspread.py
